bdr.BDR.scala.error
Erreur de compilation :
BDR:9: error: not found: value L
    else if(litMessage()==L) {
                          ^BDR:13: error: not found: value I
    else if(litMessage()==I) {
                          ^BDR:17: error: not found: value A
    else if(litMessage()==A) {
                          ^BDR:20: error: not found: value B
    else if(litMessage()==B) {
                          ^BDR:24: error: not found: value C
    else if(litMessage()==C) {
                          ^BDR:29: error: not found: value Z
    else if(litMessage()==Z) {
                          ^BDR:32: error: not found: value Y
    else if(litMessage()==Y) {
                          ^BDR:36: error: not found: value X
    else if(litMessage()==X) {
                          ^